Pagina principal concluida

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   </head>
   <body>
     <header>
-      <div id="menu">
+      <!-- <div id="menu">
         <i class="fa-solid fa-bars" style="color: #ededed"></i>
-      </div>
+      </div> -->
       <div id="containerLogo">
         <p id="nameFirst">Manuh</p>
         <p id="nameSecond">Cakestudio</p>
@@ -42,25 +42,24 @@
     </header>
     <nav>
       <ul>
-        <li><a href="#">Bolos</a></li>
-        <li><a href="#">Brownies</a></li>
-        <li><a href="#">Brigadeiros</a></li>
-        <li><a href="#">Capcukes</a></li>
-        <li><a href="#">Doces finos</a></li>
-        <li><a href="#">Tortas e mini tortas</a></li>
-        <li><a href="#">Trunfas</a></li>
-        <li><a href="#">Pudins</a></li>
+        <li><a href="#cakes">Bolos</a></li>
+        <li><a href="#brownies">Brownies</a></li>
+        <li><a href="#brigadeiros">Brigadeiros</a></li>
+        <li><a href="#capcukes">Capcukes</a></li>
+        <li><a href="#doceFinos">Doces finos</a></li>
+        <li><a href="#tortas">Tortas e mini tortas</a></li>
+        <li><a href="#trunfas">Trunfas</a></li>
+        <li><a href="#pudins">Pudins</a></li>
       </ul>
     </nav>
     <section id="presentation">
-      <h1>Bem vindos ao mundo doce da Manuh🍫</h1>
-      <div class="containerPresentation">
-        <article><p>Nossos doces são feito com <span>amor</span> e ingredientes de <span>qualidade</span>. Somos uma confeitaria caseira, Mas não se engane, fazemos de tudo para que o cliente tenha a <span>melhor experiêcia</span> possível.</p></article>
-        <img src="img/svgs/cake shop-cuate.svg" alt="Cake shop">
+      <h1>Bem vindos ao mundo doce da Manuh!!</h1>
+      <div class="containerHero">
+        <img src="img/svgs/cake shop-cuate.svg" alt="Cake shop" />
       </div>
     </section>
     <main>
-      <section class="cakes">
+      <section id="cakes">
         <details open>
           <summary id="summaryCake">
             <h2>Bolos</h2>
@@ -74,7 +73,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Ratione eaque alias obcaecati.
                 </p>
-                <a href=""
+                <a href="https://wa.me/5581986675883" target="_blank"
                   >Consulte os sabores disponiveis no
                   <i class="fa-brands fa-whatsapp"></i
                 ></a>
@@ -93,7 +92,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Ratione eaque alias obcaecati.
                 </p>
-                <a href=""
+                <a href="https://wa.me/5581986675883" target="_blank"
                   >Consulte os sabores disponiveis no
                   <i class="fa-brands fa-whatsapp"></i
                 ></a>
@@ -106,7 +105,7 @@
           </div>
         </details>
       </section>
-      <section class="brownies">
+      <section id="brownies">
         <details open>
           <summary id="summaryBrownies">
             <h2>Brownies</h2>
@@ -120,7 +119,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Ratione eaque alias obcaecati.
                 </p>
-                <a href=""
+                <a href="https://wa.me/5581986675883" target="_blank"
                   >Consulte os sabores disponiveis no
                   <i class="fa-brands fa-whatsapp"></i
                 ></a>
@@ -139,7 +138,7 @@
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Ratione eaque alias obcaecati.
                 </p>
-                <a href=""
+                <a href="https://wa.me/5581986675883" target="_blank"
                   >Consulte os sabores disponiveis no
                   <i class="fa-brands fa-whatsapp"></i
                 ></a>
@@ -152,6 +151,323 @@
           </div>
         </details>
       </section>
+      <section id="brigadeiros">
+        <details open>
+          <summary id="summaryBrownies">
+            <h2>Brigadeiros</h2>
+            <i class="fa-solid fa-caret-down"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>brigadeiros tradicionais (Cento)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$150,00 (Unidade 1,50)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/brigadeiro-tradicional.jpg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Brigadeiros gourmet (Cento)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$180,00 (Unidade 1,80)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/brigadeiro-gourmet.jpeg" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
+      <section id="capcukes">
+        <details open>
+          <summary id="summaryBrownies">
+            <h2>Capcukes</h2>
+            <i class="fa-solid fa-caret-down"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Cupcake (Individual)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$5,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/cupcake-uni.jpg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Capcake para festejar (30 Unidades)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$130,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/cupcakes-30.jpeg" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
+      <section id="DocesFinos">
+        <details open>
+          <summary id="summaryBrownies">
+            <h2>Doces finos</h2>
+            <i class="fa-solid fa-caret-down"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Coquelitas</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$2,00 (Unidade)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/coquelitas.jpeg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Copinho de chocolate</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$3,00 (Unidades)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/copinho.jpeg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Bombom tradicional</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/558198667588"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$1,50 (Unidades)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/bombom-tradicional.jpeg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Bombom de morango</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$3,00 (Unidade)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/bobom-morango.jpeg" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
+      <section id="tortas">
+        <details open>
+          <summary id="summaryBrownies">
+            <h2>Tortas e mini tortas</h2>
+            <i class="fa-solid fa-caret-down"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Tortinha (Individual)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$5,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/tortinha.jpeg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Torta grande (1kg)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$50,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/Torta de Limão.JPG" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
+      <section id="trunfas">
+        <details open>
+          <summary id="summaryBrownies">
+            <h2>Trunfas</h2>
+            <i class="fa-solid fa-caret-down"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Trunfas tradicionais</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$2,00(Unidade)</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/trufas.jpg" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
+      <section id="pudins">
+        <details open>
+          <summary id="summaryBrownies">
+            <h2>pudins</h2>
+            <i class="fa-solid fa-caret-down"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Mini pudim (Individual)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$8,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/pudim-p.jpg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>Brownie Grande (1kg)</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">R$50,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/pudin-g.jpg" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
     </main>
+    <footer>
+      <div id="containerLogo">
+        <p id="nameFirst">Manuh</p>
+        <p id="nameSecond">Cakestudio</p>
+      </div>
+      <h1>Contatos</h1>
+      <div class="contatos">
+        <a
+          href="https://instagram.com/manuh_cakestudio?igshid=ZDc4ODBmNjlmNQ=="
+          target="_blank"
+          ><i class="fa-brands fa-instagram"></i
+        ></a>
+        <a href="https://wa.me/5581986675883" target="_blank"
+          ><i class="fa-brands fa-whatsapp"></i
+        ></a>
+      </div>
+      <div class="containerHero">
+        <img src="img/svgs/Baker-cuate.svg" alt="Cake shop" />
+      </div>
+      <p>&copy;Todos os direitos revervados.</p>
+      <p>um site <span>ByteVoyager.</span></p>
+    </footer>
   </body>
 </html>
