--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     </header>
     <nav>
       <ul>
+        <li><a href="#kits">Kits para festejar</a></li>
         <li><a href="#cakes">Bolos</a></li>
         <li><a href="#brownies">Brownies</a></li>
         <li><a href="#brigadeiros">Brigadeiros</a></li>
@@ -59,11 +60,95 @@
       </div>
     </section>
     <main>
+      <section id="kits">
+        <details open>
+          <summary id="summaryKits">
+            <h2>Kits</h2>
+            <i class="fa-solid fa-caret-down" id="caret-down-kits"></i>
+          </summary>
+          <div class="container">
+            <div class="descriçao">
+              <h3>kit 1</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$12,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/mini-bolo.jpg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>kit 2</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$50,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/bolo-grande.jpg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>kit 3</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$50,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/bolo-grande.jpg" alt="" />
+            </div>
+          </div>
+          <div class="container">
+            <div class="descriçao">
+              <h3>kit 5</h3>
+              <article>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Ratione eaque alias obcaecati.
+                </p>
+                <a href="https://wa.me/5581986675883" target="_blank"
+                  >Consulte os sabores disponiveis no
+                  <i class="fa-brands fa-whatsapp"></i
+                ></a>
+                <p class="valor">A partir de R$50,00</p>
+              </article>
+            </div>
+            <div class="imgProduto">
+              <img src="img/pngs-jpeg/bolo-grande.jpg" alt="" />
+            </div>
+          </div>
+        </details>
+      </section>
       <section id="cakes">
         <details open>
           <summary id="summaryCake">
             <h2>Bolos</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-cakes"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -109,7 +194,7 @@
         <details open>
           <summary id="summaryBrownies">
             <h2>Brownies</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-brownies"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -153,9 +238,9 @@
       </section>
       <section id="brigadeiros">
         <details open>
-          <summary id="summaryBrownies">
+          <summary id="summaryBrigadeiros">
             <h2>Brigadeiros</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-brigadeiros"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -199,9 +284,9 @@
       </section>
       <section id="capcukes">
         <details open>
-          <summary id="summaryBrownies">
+          <summary id="summaryCapcukes">
             <h2>Capcukes</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-capcakes"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -245,9 +330,9 @@
       </section>
       <section id="DocesFinos">
         <details open>
-          <summary id="summaryBrownies">
+          <summary id="summaryDoces">
             <h2>Doces finos</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-doces"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -329,9 +414,9 @@
       </section>
       <section id="tortas">
         <details open>
-          <summary id="summaryBrownies">
+          <summary id="summaryTortas">
             <h2>Tortas e mini tortas</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-tortas"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -375,9 +460,9 @@
       </section>
       <section id="trunfas">
         <details open>
-          <summary id="summaryBrownies">
+          <summary id="summaryTrunfas">
             <h2>Trunfas</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-trunfas"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
@@ -402,9 +487,9 @@
       </section>
       <section id="pudins">
         <details open>
-          <summary id="summaryBrownies">
+          <summary id="summaryPudins">
             <h2>pudins</h2>
-            <i class="fa-solid fa-caret-down"></i>
+            <i class="fa-solid fa-caret-down" id="caret-down-pudins"></i>
           </summary>
           <div class="container">
             <div class="descriçao">
